# anime-recommender

./: .gitignore  download.py  get_data.py  pyproject.toml  requirements.txt
